RHEL8: Add disable configure options to qemu spec file
RH-Author: Markus Armbruster <armbru@redhat.com>
Message-id: <20181113162610.30902-3-armbru@redhat.com>
Patchwork-id: 83002
O-Subject: [qemu-kvm RHEL8/virt212 PATCH v3 2/2] RHEL8: Add disable configure options to qemu spec file
Bugzilla: 1598842
RH-Acked-by: Stefan Hajnoczi <stefanha@redhat.com>
RH-Acked-by: Kevin Wolf <kwolf@redhat.com>
RH-Acked-by: Danilo de Paula <ddepaula@redhat.com>

From: Jeff Cody <jcody@redhat.com>

Signed-off-by: Jeff Cody <jcody@redhat.com>
Signed-off-by: Danilo C. L. de Paula <ddepaula@redhat.com>

--- a/redhat/qemu-kvm.spec.template
+++ b/redhat/qemu-kvm.spec.template
@@ -549,7 +549,16 @@ buildldflags="VL_LDFLAGS=-Wl,--build-id"
   --disable-libxml2 \
   --enable-capstone \
   --disable-git-update \
-  --disable-crypto-afalg
+  --disable-crypto-afalg \
+  --disable-bochs \
+  --disable-cloop \
+  --disable-dmg \
+  --disable-qcow1 \
+  --disable-vdi \
+  --disable-vvfat \
+  --disable-qed \
+  --disable-parallels \
+  --disable-sheepdog
 
 
 echo "config-host.mak contents:"
