redhat: use %autopatch instead of %PATCHAPPLY%
RH-Author: Danilo de Paula <ddepaula@redhat.com>
Message-id: <20181207191939.31401-2-ddepaula@redhat.com>
Patchwork-id: 83309
O-Subject: [RHEL8/rhel qemu-kvm PATCH 1/5] redhat: use %autopatch instead of %PATCHAPPLY%
Bugzilla: 1613128
RH-Acked-by: Miroslav Rezanina <mrezanin@redhat.com>
RH-Acked-by: Wainer dos Santos Moschetta <wainersm@redhat.com>
RH-Acked-by: Eduardo Habkost <ehabkost@redhat.com>

Replacing %%PATCHAPPLY%% by the patch set is not optimal.
%autopatch is stable and deals with our use case without problems.

And also allow us to drop ~500 repetitive lines from the spec file
in dist-git.

And also fix the case where we add the patch but forget to
apply it.

Signed-off-by: Danilo C. L. de Paula <ddepaula@redhat.com>

--- a/redhat/qemu-kvm.spec.template
+++ b/redhat/qemu-kvm.spec.template
@@ -381,9 +381,8 @@ the Secure Shell (SSH) protocol.
 
 
 %prep
-%setup -q -n qemu-%{version}
-
-%%PATCHAPPLY%%
+%setup -n qemu-%{version}
+%autopatch -p1
 
 %build
 %global buildarch %{kvm_target}-softmmu
