redhat: Fixing rhev/ma conflicts.
RH-Author: Danilo de Paula <ddepaula@redhat.com>
Message-id: <20181207191939.31401-4-ddepaula@redhat.com>
Patchwork-id: 83308
O-Subject: [RHEL8/rhel qemu-kvm PATCH 3/5] redhat: Fixing rhev/ma conflicts.
Bugzilla: 1613126
RH-Acked-by: Miroslav Rezanina <mrezanin@redhat.com>
RH-Acked-by: Wainer dos Santos Moschetta <wainersm@redhat.com>
RH-Acked-by: Eduardo Habkost <ehabkost@redhat.com>

Obsoletes is what we actually want to use to be able to
migrate from RHEL-7 to RHEL-8.

Signed-off-by: Danilo C. L. de Paula <ddepaula@redhat.com>

--- a/redhat/qemu-kvm.spec.template
+++ b/redhat/qemu-kvm.spec.template
@@ -61,10 +61,9 @@ Requires: %{name}-block-rbd = %{epoch}:%{version}-%{release}     \
 Requires: %{name}-block-ssh = %{epoch}:%{version}-%{release}
 
 # Macro to properly setup RHEL/RHEV conflict handling
-%define rhel_rhev_conflicts()                                          \
-Conflicts: %1-ma                                                       \
-Conflicts: %1-rhev                                                     \
-Provides: %1-rhel = %{epoch}:%{version}-%{release}
+%define rhev_ma_conflicts()                                      \
+Obsoletes: %1-ma                                                 \
+Obsoletes: %1-rhev
 
 Summary: QEMU is a machine emulator and virtualizer
 Name: qemu-kvm
@@ -214,8 +213,7 @@ Requires:      mesa-dri-drivers
 %endif
 
 Requires: qemu-kvm-core = %{epoch}:%{version}-%{release}
-Conflicts: qemu-kvm-ma
-Conflicts: qemu-kvm-rhev
+%rhev_ma_conflicts qemu-kvm
 
 %{requires_all_modules}
 
@@ -260,7 +258,7 @@ Requires: libusbx >= 1.0.19
 Requires: usbredir >= 0.7.1
 %endif
 
-%rhel_rhev_conflicts qemu-kvm
+%rhev_ma_conflicts qemu-kvm
 
 %description -n qemu-kvm-core
 qemu-kvm is an open source virtualizer that provides hardware
@@ -273,7 +271,7 @@ hardware for a full system such as a PC and its associated peripherals.
 Summary: QEMU command line tool for manipulating disk images
 Group: Development/Tools
 
-%rhel_rhev_conflicts qemu-img
+%rhev_ma_conflicts qemu-img
 
 %description -n qemu-img
 This package provides a command line tool for manipulating disk images.
@@ -288,7 +286,7 @@ Requires(post): systemd-units
 Requires(preun): systemd-units
 Requires(postun): systemd-units
 
-%rhel_rhev_conflicts qemu-kvm-common
+%rhev_ma_conflicts qemu-kvm-common
 
 %description -n qemu-kvm-common
 qemu-kvm is an open source virtualizer that provides hardware emulation for
