Add edk2 Requires to qemu-kvm
RH-Author: Danilo de Paula <ddepaula@redhat.com>
Message-id: <20181218010822.17338-1-ddepaula@redhat.com>
Patchwork-id: 83550
O-Subject: [RHEL-8.0/rhel qemu-kvm PATCH v2] Add edk2 Requires to qemu-kvm
Bugzilla: 1654276
RH-Acked-by: Philippe Mathieu-Daudé <philmd@redhat.com>
RH-Acked-by: Miroslav Rezanina <mrezanin@redhat.com>
RH-Acked-by: Yash Mankad <ymankad@redhat.com>

BZ: 1654276
BZ: 1660208
Branch: rhel8/master-2.12.0
Branch: rhel8/master-3.1.0
Upstream: Downstream only
Brew: 19546179

Users shouldn't be worried about
having the right firmware installed.
They should be included as qemu-kvm-core dependencies.

Signed-off-by: Danilo C. L. de Paula <ddepaula@redhat.com>

--- a/redhat/qemu-kvm.spec.template
+++ b/redhat/qemu-kvm.spec.template
@@ -227,7 +227,12 @@ Requires: qemu-img = %{epoch}:%{version}-%{release}
 %ifarch %{ix86} x86_64
 Requires: seabios-bin >= 1.10.2-1
 Requires: sgabios-bin
+Requires: edk2-ovmf
 %endif
+%ifarch aarch64
+Requires: edk2-aarch64
+%endif
+
 %ifnarch aarch64 s390x
 Requires: seavgabios-bin >= 1.10.2-1
 Requires: ipxe-roms-qemu >= 20170123-1
