Enable libpmem to support nvdimm
RH-Author: plai@redhat.com
Message-id: <1546880543-24860-11-git-send-email-plai@redhat.com>
Patchwork-id: 83895
O-Subject: [RHEL8.0 qemu-kvm PATCH v7 10/10] [redhat] Enable libpmem to support nvdimm
Bugzilla: 1539285
RH-Acked-by: Stefan Hajnoczi <stefanha@redhat.com>
RH-Acked-by: Dr. David Alan Gilbert <dgilbert@redhat.com>
RH-Acked-by: Eduardo Habkost <ehabkost@redhat.com>

Signed-off-by: Paul Lai <plai@redhat.com>
Signed-off-by: Danilo C. L. de Paula <ddepaula@redhat.com>

--- a/redhat/qemu-kvm.spec.template
+++ b/redhat/qemu-kvm.spec.template
@@ -189,6 +189,10 @@ BuildRequires: systemd-devel
 BuildRequires: libcap-ng-devel
 
 BuildRequires: diffutils
+%ifarch x86_64
+BuildRequires: libpmem-devel
+Requires: libpmem
+%endif
 
 # qemu-keymap
 BuildRequires: pkgconfig(xkbcommon)
@@ -442,6 +446,11 @@ buildldflags="VL_LDFLAGS=-Wl,--build-id"
   --enable-vxhs \
 %else
   --disable-vxhs \
+%endif
+%ifarch x86_64
+  --enable-libpmem \
+%else
+  --disable-libpmem \
 %endif
   --enable-vhost-user \
   --python=%{__python3} \
