qemu-kvm.spec.template: Update %files for tests rpm to remove warnings
BZ: https://bugzilla.redhat.com/show_bug.cgi?id=1601107
BRANCH: rhel8/master-2.12.0
UPSTREAM: RHEL only
BREW:
https://brewweb.engineering.redhat.com/brew/taskinfo?taskID=19765739

Tested-by: Yash Mankad <ymankad@redhat.com>

Fix the %files section for the new qemu-kvm-tests rpm in the
spec.template file to only pass the parent %{testsdir} to remove
the following warnings

"warning: File listed twice: /usr/lib64/qemu-kvm/tests-src/{..}"

Signed-off-by: Yash Mankad <ymankad@redhat.com>

--- a/redhat/qemu-kvm.spec.template
+++ b/redhat/qemu-kvm.spec.template
@@ -975,14 +975,7 @@ useradd -r -u 107 -g qemu -G kvm -d / -s /sbin/nologin \
 %dir %{_localstatedir}/log/qemu-ga
 
 %files tests
-%{testsdir}/README
-%{testsdir}/tests/
-%{testsdir}/tests/acceptance/
-%{testsdir}/tests/qemu-iotests/
-%{testsdir}/tests/Makefile.include
-%{testsdir}/scripts/
-%{testsdir}/scripts/qmp/
-%{testsdir}/scripts/qemu.py
+%{testsdir}
 
 %files block-curl
 %{_libdir}/qemu-kvm/block-curl.so
