redhat: fixing zstream build

--- a/redhat/Makefile
+++ b/redhat/Makefile
@@ -1,6 +1,6 @@
 include Makefile.common
 
-rh-brew rh-env-prep: SRPM_NAME=$(NAME)-$(VERSION)$(RELEASE_SEPARATOR)$(RELEASE)$(DIST)
+rh-brew rh-env-prep: SRPM_NAME=$(NAME)-$(VERSION)$(RELEASE_SEPARATOR)$(RELEASE)$(DIST).$(ZRELEASE)
 rh-brew: BUILD_TARGET=rhel-8.0-candidate
 
 REDHAT:=$(shell pwd)
